k8s/cloud/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - containerPort: 9000  # S3 API
            - containerPort: 9001  # console
          volumeMounts:
            - name: data
              mountPath: /data
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "s3.homelab"
            - "minio.homelab"
      volumes:
        - name: data
          hostPath:
            path: /home/aadi/store/minio-data
            type: DirectoryOrCreate
